--- a/challenge1/pom.xml
+++ b/challenge1/pom.xml
@@ -13,6 +13,14 @@
     <groupId>com.example.challenge1</groupId>
     <artifactId>challenge1</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 
 </project>
