--- a/challenge2/pom.xml
+++ b/challenge2/pom.xml
@@ -14,5 +14,14 @@
     <artifactId>challenge2</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.10.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
+
 
 </project>
